# CsharpCLICplusplusDLLExample

./: CMakeLists.txt  README.md
CLI_DLL_Bridge/: AssemblyInfo.cpp  CMakeLists.txt  ManagedEntity.cpp  ManagedEntity.h
Csharp_Test_Application/: Csharp_Test_Application.csproj  Csharp_Test_Application.csproj.template  Program.cs
Csharp_Test_Application/Properties/: AssemblyInfo.cs
UnmanagedNativeDLL/: CMakeLists.txt  NativeEntity.cpp  NativeEntity.h  TestClassCallers.cpp  TestClassCallers.h
UnmanagedNativeTest_Application/: CMakeLists.txt  main.cpp
